# idos_game_sdk

./: .gitignore  Cargo.toml  FEATURE_COMPLETION_STATUS.md  HOW_TO_USE_TRANSACTIONS.md  IMPLEMENTATION_SUMMARY.md  INVENTORY_IMPLEMENTATION.md  LEADERBOARD_IMPLEMENTATION.md  LICENSE  MARKETPLACE_IMPLEMENTATION.md  METAPLEX_INTEGRATION.md  README.md  REFACTORING_SUMMARY.md  TRANSACTION_CAPABILITIES.md  WASM_GUIDE.md  build_wasm.sh
examples/: basic_usage.rs  ethereum_gas_estimation.rs  ethereum_wallet.rs  full_transaction_demo.rs  inventory.rs  leaderboard.rs  marketplace.rs  solana_nft_loading.rs  solana_transactions.rs  solana_wallet.rs  wallet_management.rs
src/: client.rs  config.rs  error.rs  lib.rs  storage.rs
src/analytics/: dto.rs  handler.rs  mod.rs
src/auth/: auth_plugin.rs  dto.rs  handler.rs  helper.rs  mod.rs
src/crypto_ethereum/: dto.rs  ethereum_plugin.rs  handler.rs  helper.rs  mod.rs  service.rs  transactions.rs
src/crypto_solana/: anchor.rs  dto.rs  handler.rs  helper.rs  mod.rs  nft.rs  service.rs  solana_plugin.rs  transactions.rs
src/iap/: dto.rs  handler.rs  iap_plugin.rs  mod.rs
src/inventory/: dto.rs  handler.rs  inventory_plugin.rs  mod.rs
src/leaderboard/: dto.rs  handler.rs  leaderboard_plugin.rs  mod.rs
src/marketplace/: dto.rs  handler.rs  marketplace_plugin.rs  mod.rs
src/wallet/: creation.rs  dto.rs  encryption.rs  import.rs  keystore.rs  manager.rs  mod.rs
